# playgroud_data

./: README.md  pyproject.toml
dbt_project/: README.md  cities.csv  dbt_project.yml
dbt_project/models/: addresses_bronze.sql  addresses_silver.sql  schema.yml  spend_by_city_gold.sql
dbt_project/models/cdc_pipeline/: sources.yml
dbt_project/models/cdc_pipeline/cleansing/: addresses_cleansing.sql  cities_cleansing.sql
dbt_project/models/cdc_pipeline/mart/: address_by_country.sql  city_address_summary.sql  person_location_detail.sql
dbt_project/models/cdc_pipeline/raw/: addresses_raw.sql  cities_raw.sql
dbt_project/models/main_service/cleansing/: addresses_silver.sql  cities_silver.sql  schema.yml
dbt_project/models/main_service/mart/: spend_by_city_gold.sql  spend_by_city_gold.yml
dbt_project/models/main_service/raw/: addresses_bronze.sql  cities_bronze.sql  schema.yml
dbt_project/models/service1/bronze/: cities_bronze.sql  schema.yml
dbt_project/models/service1/gold/: spend_by_city_gold.sql
dbt_project/models/service1/silver/: cities_silver.sql  schema.yml
dbt_project/tests/: test_spend_by_city_no_negative.sql
