[project]
name = "playgroud-data"
version = "0.1.0"
description = ""
authors = [
    {name = "leeceo97"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dbt-postgres (>=1.9.1,<2.0.0)",
    "dbt-snowflake (>=1.10.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
